minor spacing fixes

--- a/Student/my profile/myprofile.css
+++ b/Student/my profile/myprofile.css
@@ -47,4 +47,7 @@ nav, .mainCard{
     .personalInfo{
         margin-top: 2.5vh;
     }
+    .enrollmentInfo{
+        margin-bottom: 2.5vh;
+    }
 }
